small code change

--- a/themes/funnyjim/layout/_partial/head.ejs
+++ b/themes/funnyjim/layout/_partial/head.ejs
@@ -75,5 +75,5 @@
   }());
   //]]>
   </script>
-  <%- css(['style', '//patrickwu.space/style.css']) %> 
+  <%- css(['style', 'https://patrickwu.space/style.css']) %> 
 </head>
